<resources>
    <string name="app_name">InternEco</string>
    <string name="remove_ads_for_the">Remove Ads for the</string>
    <string name="best_experience">Best Experience</string>
    <string name="s2note">S2Note</string>
    <string name="lifetime">Lifetime</string>
    <string name="best_offer">Best Offer</string>
    <string name="onetime_purchase">Onetime Purchase</string>
    <string name="_27_99">$27.99 </string>
    <string name="_32_99">$32.99 </string>
    <string name="weekly_payments_auto_renew_cancel_anytime">Weekly payments, auto renew, cancel anytime.</string>
    <string name="continues">Continue</string>
    <string name="payment_will_be_charged_to_your_google_play_account_upon_confirmation_of_purchase_subscription_will_automatically_renew_according_to_the_subscription_plan_you_choose_unless_canceled_24_hours_before_the_end_of_the_current_subscription_plan_non_subscribed_users_can_still_use_the_application_however_some_paid_features_may_be_limited_you_can_manage_your_subscription_or_cancel_your_subscription_at_any_time_in">Payment will be charged to your Google Play account upon confirmation of purchase\n Subscription will automatically renew according to the subscription plan you choose unless canceled 24 hours before the end of the current subscription plan\n Non-subscribed users can still use the application however some paid features may be limited\n You can manage your subscription or cancel your subscription at any time in</string>
    <string name="payment_will_be_charged_to_your_google_play_account_upon_confirmation_of_purchase_subscription_will_automatically_renew_according_to_the_subscription_plan_you_choose_unless_canceled_24_hours_before_the_end_of_the_current_subscription_plan_non_subscribed_users_can_still_use_the_application_however_some_paid_features_may_be_limited_you_can_manage_your_subscription_or_cancel_your_subscription_at_any_time">. Payment will be charged to your Google Play account upon confirmation of purchase \nSubscription will automatically renew according to the subscription plan you choose unless canceled 24 hours before the end of the current subscription plan \nNon-subscribed users can still use the application however some paid features may be limited \nYou can manage your subscription or cancel your subscription at any time in</string>
    <string name="_7_day">7-Day</string>
    <string name="cancel_anytime">Cancel anytime</string>
    <string name="remove_ads_for">Remove Ads for the\n</string>
    <string name="best_experiences">Best Experience</string>
    <string name="claim_30_off">CLAIM 30% OFF</string>
    <string name="all_premium"><![CDATA[All premium features & no ads]]></string>
    <string name="text_number">1</string>
    <string name="text_month">Month</string>
    <string name="text_price">$8.99</string>
    <string name="claim_offer_now">Claim Offer Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_day_free">3-day free trial, then $4.99 for first week. After that, auto-renews at $8/week. Cancel anytime</string>
    <string name="text_policy">By continuing you agree to our <b>Terms</b> and <b>Privacy policies</b>: \n.Subscription gives you access to Vivishow\'s premium features, all ads will be removed. \n.Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play. \n.You won’t be charged if subscription is canceled before trial period ends. \n.Subscription is not required to use Vivishow.</string>
    <string name="_2_99">$2.99</string>
    <string name="terms">Terms</string>
    <string name="privacy_policies">Privacy policies</string>
    <string name="text_price2">$2.99</string>
    <string name="text_unlock">Unlock all pro features. No ads.</string>
    <string name="text_free_day">3-day free trial</string>
    <string name="text_cancel">Auto-renew. Cancel anytime</string>
    <string name="text_price_slideshow">23,000đ</string>
    <string name="per_with_month">per week after trial   \n</string>
    <string name="best_deal">BEST DEAL</string>
    <string name="start_free_trial">Start Free Trial</string>
    <string name="or_use_limited">or Use limited version</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="slideshow_price2">60.000đ</string>
    <string name="slideshow_month2">per month \n</string>
    <string name="slideshow_price3">600,000đ</string>
    <string name="slideshow_month3">forever \n</string>
    <string name="unlimited_access_to">Unlimited Access To</string>
    <string name="vivishow">ViViShow</string>
    <string name="pro">PRO \n</string>
    <string name="string_access">Access all effects, frames</string>
    <string name="remove_watermark">Remove watermark</string>
    <string name="high_quality_export">High quality export</string>
    <string name="unlock_photo">Unlock 120 photo limit</string>
    <string name="monthly">Monthly</string>
    <string name="life_time">Life time</string>
    <string name="one_time_payment">One-time payment</string>
</resources>