<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item"
    android:background="@drawable/bg_card_border_before"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLifetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifetime"
        android:textColor="#000000"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_sans_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBadge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_badge_orange"
        android:paddingStart="8dp"
        android:paddingTop="2dp"
        android:paddingEnd="8dp"
        android:paddingBottom="2dp"
        android:text="@string/best_offer"
        android:textColor="@color/background_color"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvLifetime"
        app:layout_constraintTop_toTopOf="@id/tvLifetime" />

    <TextView
        android:id="@+id/tvOnetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/onetime_purchase"
        android:fontFamily="@font/nunito_sans_regular"
        android:textColor="#313131"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLifetime" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_27_99"
        android:textColor="#000000"
        android:textSize="18sp"
        android:fontFamily="@font/nunito_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOldPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_32_99"
        android:fontFamily="@font/nunito_sans_regular"
        android:textStyle="italic"
        android:textColor="@color/text_color_second"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>
