<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <merge
        tools:orientation="vertical"
        tools:parentTag="androidx.appcompat.widget.LinearLayoutCompat">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:autoSizeMaxTextSize="@dimen/_28sdp"
            app:autoSizeMinTextSize="@dimen/_20sdp"
            app:autoSizeTextType="uniform"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingTop="@dimen/_10sdp"
            android:maxLines="1"
            android:text="@string/text_number"
            android:textSize="@dimen/_28sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            app:autoSizeMaxTextSize="@dimen/_18sdp"
            app:autoSizeMinTextSize="@dimen/_16sdp"
            app:autoSizeTextType="uniform"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="1"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/text_month"
            android:textAlignment="center"
            android:textSize="@dimen/_16sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:autoSizeMaxTextSize="@dimen/_18sdp"
            app:autoSizeMinTextSize="@dimen/_14sdp"
            app:autoSizeTextType="uniform"
            android:background="@drawable/background_bottom_white"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/text_price"
            android:textSize="@dimen/_18sdp" />
    </merge>
</layout>